feature(12): refatorando css para maior reusabilidade de codigo

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,19 +1,18 @@
 ---
-import "../styles/global.css";
+import "../styles/main.scss";
 
-const { title = "DevOps Manaus" } = Astro.props;
-
+const {title = "DevOps Manaus"} = Astro.props;
 ---
 
 <html lang="pt-BR">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{title}</title>
-    <link rel="icon" href="/assets/media/images/favi.ico" />
+    <link rel="icon" href="/assets/media/images/favi.ico"/>
 </head>
 <body>
-<slot />
+<slot/>
 <script src="/assets/script/main.js" defer></script>
 </body>
 </html>
