--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,8 @@
 @use 'components/stats';
 @use 'components/footer';
 @use 'components/partners';
+@use 'components/modal';
+@use 'components/faq';
 
 // 4. Página home
 @use 'pages/home';
